# ks_templates

./: README.md
dotdesktop/: template.toml  {{program_name $$ slugify}}.desktop
git_secrets/: .gitattributes  secrets_encryption.md  template.toml
git_secrets/keys/: public_keys.txt
git_secrets/scripts/: decrypt_env.sh  decrypt_json.sh  decrypt_yaml.sh  encrypt_env.sh  encrypt_json.sh  encrypt_yaml.sh  install_git_filters.sh
landolamp/: .lando.yml  template.toml
rhai/: template.toml
rhai/rhai_{{module}}/: Cargo.toml
rhai_module/: README.md
rhai_modules/src/: lib.rs
rhai_modules/tests/: test_{{module}}.rs
rust_project/: Cargo.toml  template.toml
rust_project/src/: integration_test.rs  main.rs
