[package]
name = "{{project_name}}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitfailure = "0.5.1"
failure = "0.1.8"
structopt = { version = "0.3.26", features = ["wrap_help", "suggestions", "doc"] }
